[package]
name = "pupil"
version = "0.2.0"
authors = ["CasualX <CasualX@GitHub.com>"]

description = "Arithmetic expression evaluator."

documentation = "https://docs.rs/pupil"
repository = "https://github.com/CasualX/pupil-rs"

readme = "readme.md"

keywords = ["expr", "eval", "calc", "calculator"]

license = "MIT"

[dependencies]
libc = "0.2"

[[bin]]
name = "pupil"
doc = false
