[package]
name = "pupil"
version = "0.2.0"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

description = "Arithmetic expression evaluator."
documentation = "https://docs.rs/pupil"
repository = "https://github.com/CasualX/pupil-rs"
readme = "readme.md"
keywords = ["expr", "eval", "calc", "calculator"]

[dependencies]
libc = "0.2"

[[bin]]
name = "pupil"
doc = false
