[package]
name = "pupil"
version = "1.0.0"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

description = "Arithmetic expression evaluator."
documentation = "https://docs.rs/pupil"
repository = "https://github.com/CasualX/pupil-rs"
readme = "readme.md"
keywords = ["expr", "eval", "calc", "calculator"]

[dependencies]
fast-float = "0.2"

[dev-dependencies]
libc = "0.2"
